<BalajiN/Luka> #0000: Cleaned-up dependencies, and moved them to the parent-pom.